--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
     "@ignite-ui/react": "^2.2.4",
-    "@prisma/client": "^5.1.1",
+    "@prisma/client": "5.3.1",
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
@@ -31,6 +31,6 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/cookie": "^0.5.1",
-    "prisma": "^5.1.1"
+    "prisma": "5.3.1"
   }
 }
